# locoin

./: .gitignore
solana_wallet/: package-lock.json  package.json
solana_wallet/src/program/: Cargo.toml
solana_wallet/src/program/src/: lib.rs
